--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.25",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
